# shapeography

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyproject.yml  setup.py
Documentation/: client.md  geometry.md  unzip.md
shapeography/: __init__.py
shapeography/census/: demarcations.py  urls.py
shapeography/client/: __init__.py  client.py
shapeography/utils/: __init__.py  geometry.py  unzip.py
src/shapeography/: __init__.py
src/shapeography/client/: __init__.py  client.py
src/shapeography/utils/: geometry.py  unzip.py
