[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "shapeography"
version = "0.1"
authors = [
  { name="Eric J Drewitz"},
]
description = "A Client that manages shapefiles and geojsons"
readme = "README.md"
keywords = ["geography", "cartography"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Geography",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"cartopy>=0.24.0",
    "geopandas>=1.1.0"
]