[project]
name = "shapeography"
version = "1.0"
description = "A Python library that both a client that downloads various shapefiles and GEOJSON files from the web and processes these geometry files. Users can also process locally hosted shapefiles and GEOJSON files. Also works for those on VPN/PROXY connections."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE*"]
authors = [
    { name = "Eric J. Drewitz" },
]
keywords = ["cartography", "geography"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

dependencies = [
	"cartopy>=0.24.0",
    "geopandas>=1.1.0",
    "requests>=2.32.4",
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory

[project.urls]
Documentation = "https://github.com/edrewitz/shapeography?tab=readme-ov-file#shapeography"
Repository = "https://github.com/edrewitz/shapeography/tree/main"
